--- a/styles/style.css
+++ b/styles/style.css
@@ -1,123 +1,99 @@
-*{
-    margin: 0;
-    padding: 0;
-}
+@charset "UTF-8";
+.color-gris-claro {
+  background-color: gray;
+  color: white;
+  -webkit-text-stroke: 0.2px black;
+  margin-top: 50px; }
 
-body{
-    background-color: white;
-}
+.copy-gris {
+  background-color: #585757;
+  color: white;
+  -webkit-text-stroke: 0.2px black;
+  text-decoration: none; }
 
-/*header*/
-.color-header{
-    background-color: pink;
-}
+.copy-black {
+  background-color: black; }
 
-.navbar-brand img{
-    width: 300px;
-}
-.tamaño{
-    font-size: 20px;
-    color: black;
-    -webkit-text-stroke: 1px black;
-}
-.busqueda{
-    border: 2px red solid;
-    color: black;
-    -webkit-text-stroke: 0.5px black;
-}
-input .busqueda :hover{
-    background-color: blueviolet;
-}
+.enlace-footer {
+  text-decoration: none; }
 
-.cmbcolor{
-    background-color: pink;
-}
+.enlaces {
+  width: 35px; }
 
+.color-header {
+  background-color: pink; }
 
-/* main h1*/
-.main{
-    margin-top: 25px;
-    background-image: url("../imagenes/fondos/main.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    height: 450px;
-    
-}
-h1{ 
-    padding-top: 150px;
-    text-align: center;
-    font-family: 'Charmonman', cursive;
-    font-size: 70px;
-    font-style:italic;
-    text-decoration: solid; 
-    color: white;
-    text-shadow: 3px black;
-    -webkit-text-stroke: 2px black;
-    
-}
-.parrafo-h1{
-    text-align: center;
-    font-family: 'Charmonman', cursive;
-    font-size: 35px;
-    font-style:italic;
-    text-decoration: solid; 
-    color: white;
-    text-shadow: 2px black;
-    -webkit-text-stroke: 1.5px black;
-    
-    }
+.navbar-brand img {
+  width: 300px; }
+
+.tamaño {
+  font-size: 20px;
+  color: black;
+  -webkit-text-stroke: 1px black; }
+
+.busqueda {
+  border: 2px red solid;
+  color: black;
+  -webkit-text-stroke: 0.5px black; }
+  .busqueda:hover {
+    background-color: blueviolet; }
+
+.cmbcolor {
+  background-color: pink; }
+
+.main {
+  margin-top: 25px;
+  background-image: url("../imagenes/fondos/main.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  height: 450px; }
+
+h1 {
+  padding-top: 150px;
+  text-align: center;
+  font-family: 'Charmonman', cursive;
+  font-size: 70px;
+  font-style: italic;
+  text-decoration: solid;
+  color: white;
+  text-shadow: 3px black;
+  -webkit-text-stroke: 2px black; }
+
+.parrafo-h1 {
+  text-align: center;
+  font-family: 'Charmonman', cursive;
+  font-size: 35px;
+  font-style: italic;
+  text-decoration: solid;
+  color: white;
+  text-shadow: 2px black;
+  -webkit-text-stroke: 1.5px black; }
+
+* {
+  margin: 0;
+  padding: 0; }
+
+body {
+  background-color: white; }
 
 /* card*/
-.inicio{
-    margin-top: 50px;
-}
-
+.inicio {
+  margin-top: 50px; }
 
 /*carrusel*/
+.carrusel {
+  margin-top: 50px; }
 
-.carrusel{
-    margin-top: 50px;
-}
-.imagenCarrusel{
-    width: 500px;
-    height: 500px;
-}
-.carousel-item{
-    width: 500px;
-    height: 500px;
-}
+.imagenCarrusel {
+  width: 500px;
+  height: 500px; }
+
+.carousel-item {
+  width: 500px;
+  height: 500px; }
+
 /*videos*/
-
-.videos-espacio{
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-
-
-/*footer*/
-.color-gris-claro{
-    background-color: gray;
-    color:white;
-    -webkit-text-stroke: 0.2px black;
-    margin-top: 50px;
-
-}
-
-
-.copy-gris{
-    background-color: rgb(88, 87, 87);
-    color: white;
-    -webkit-text-stroke: 0.2px black;
-    text-decoration: none;
-}
-
-.copy-black{
-    background-color: black;
-}
-.enlace-footer{
-    text-decoration: none;
-}
-.enlaces{
-    width: 35px;
-}
+.videos-espacio {
+  margin-top: 50px;
+  margin-bottom: 50px; }
