--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -1,24 +1,40 @@
-.color-header{
-    background-color: pink;
-}
+header {
+    nav {
+        .color-header {
+            background-color: pink;
+            .navbar-brand img{
+                width: 300px;
+            }
+        }
 
-.navbar-brand img{
-    width: 300px;
-}
-.tamaño{
-    font-size: 20px;
-    color: black;
-    -webkit-text-stroke: 1px black;
-}
-.busqueda{
-    border: 2px red solid;
-    color: black;
-    -webkit-text-stroke: 0.5px black;
-    &:hover{
-        background-color: blueviolet;
+        .collapse {
+            ul {
+                li {
+                    .tamaño {
+                        font-size: 20px;
+                        color: black;
+                        -webkit-text-stroke: 1px black;
+                    }
+                }
+            }
+
+            form {
+                .busqueda {
+                    border: 2px red solid;
+                    color: black;
+                    -webkit-text-stroke: 0.5px black;
+                    &:hover{
+                        background-color: blueviolet;
+                    }
+
+                }
+            }
+            .cmbcolor{
+                background-color: pink;
+            }
+
+        }
+
     }
 }
 
-.cmbcolor{
-    background-color: pink;
-}
