--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -1,33 +1,58 @@
-.main{
-    margin-top: 25px;
-    background-image: url("../imagenes/fondos/main.jpg");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    height: 450px;
-    
-}
-h1{ 
-    padding-top: 150px;
-    text-align: center;
-    font-family: 'Charmonman', cursive;
-    font-size: 70px;
-    font-style:italic;
-    text-decoration: solid; 
-    color: white;
-    text-shadow: 3px black;
-    -webkit-text-stroke: 2px black;
-    
-}
-.parrafo-h1{
-    text-align: center;
-    font-family: 'Charmonman', cursive;
-    font-size: 35px;
-    font-style:italic;
-    text-decoration: solid; 
-    color: white;
-    text-shadow: 2px black;
-    -webkit-text-stroke: 1.5px black;
-    
-    }
+main {
+    .main {
+        margin-top: 25px;
+        background-image: url("../imagenes/fondos/main.jpg");
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+        background-size: cover;
+        height: 450px;
 
+        h1 {
+            padding-top: 150px;
+            text-align: center;
+            font-family: 'Charmonman', cursive;
+            font-size: 70px;
+            font-style: italic;
+            text-decoration: solid;
+            color: white;
+            text-shadow: 3px black;
+            -webkit-text-stroke: 2px black;
+
+        }
+
+        @media screen and (min-width: 320px) and (max-width: 479px) {
+            h1 {
+                font-size: 35px;
+            }
+        }
+        @media screen and (min-width: 480px) and (max-width: 767px){
+            h1 {
+                font-size: 40px;
+            }
+        }
+
+        .parrafo-h1 {
+            text-align: center;
+            font-family: 'Charmonman', cursive;
+            font-size: 40px;
+            font-style: italic;
+            text-decoration: solid;
+            color: white;
+            text-shadow: 2px black;
+            -webkit-text-stroke: 1.5px black;
+
+        }
+
+        @media screen and (min-width: 320px) and (max-width: 479px) {
+            .parrafo-h1 {
+                font-size: 30px;
+            }
+
+        }
+        @media screen and (min-width: 480px) and (max-width: 767px){
+            .parrafo-h1 {
+                font-size: 35px;
+            }
+        }
+    }
+}
