--- a/styles/style.css
+++ b/styles/style.css
@@ -20,55 +20,64 @@
 .enlaces {
   width: 35px; }
 
-.color-header {
+header nav .color-header {
   background-color: pink; }
+  header nav .color-header .navbar-brand img {
+    width: 300px; }
 
-.navbar-brand img {
-  width: 300px; }
-
-.tamaño {
+header nav .collapse ul li .tamaño {
   font-size: 20px;
   color: black;
   -webkit-text-stroke: 1px black; }
 
-.busqueda {
+header nav .collapse form .busqueda {
   border: 2px red solid;
   color: black;
   -webkit-text-stroke: 0.5px black; }
-  .busqueda:hover {
+  header nav .collapse form .busqueda:hover {
     background-color: blueviolet; }
 
-.cmbcolor {
+header nav .collapse .cmbcolor {
   background-color: pink; }
 
-.main {
+main .main {
   margin-top: 25px;
   background-image: url("../imagenes/fondos/main.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   height: 450px; }
-
-h1 {
-  padding-top: 150px;
-  text-align: center;
-  font-family: 'Charmonman', cursive;
-  font-size: 70px;
-  font-style: italic;
-  text-decoration: solid;
-  color: white;
-  text-shadow: 3px black;
-  -webkit-text-stroke: 2px black; }
-
-.parrafo-h1 {
-  text-align: center;
-  font-family: 'Charmonman', cursive;
-  font-size: 35px;
-  font-style: italic;
-  text-decoration: solid;
-  color: white;
-  text-shadow: 2px black;
-  -webkit-text-stroke: 1.5px black; }
+  main .main h1 {
+    padding-top: 150px;
+    text-align: center;
+    font-family: 'Charmonman', cursive;
+    font-size: 70px;
+    font-style: italic;
+    text-decoration: solid;
+    color: white;
+    text-shadow: 3px black;
+    -webkit-text-stroke: 2px black; }
+  @media screen and (min-width: 320px) and (max-width: 479px) {
+    main .main h1 {
+      font-size: 35px; } }
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    main .main h1 {
+      font-size: 40px; } }
+  main .main .parrafo-h1 {
+    text-align: center;
+    font-family: 'Charmonman', cursive;
+    font-size: 40px;
+    font-style: italic;
+    text-decoration: solid;
+    color: white;
+    text-shadow: 2px black;
+    -webkit-text-stroke: 1.5px black; }
+  @media screen and (min-width: 320px) and (max-width: 479px) {
+    main .main .parrafo-h1 {
+      font-size: 30px; } }
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    main .main .parrafo-h1 {
+      font-size: 35px; } }
 
 * {
   margin: 0;
