--- a/scss/partials/_main.scss
+++ b/scss/partials/_main.scss
@@ -27,7 +27,7 @@ main {
         }
         @media screen and (min-width: 480px) and (max-width: 767px){
             h1 {
-                font-size: 40px;
+                font-size: map-get($estilos, grande);
             }
         }
 
