--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,6 @@
 @import "partials/_variables";
+@import "partials/maps";
+@import "partials/mixins";
 @import "partials/_footer";
 @import "partials/_header";
 @import "partials/_main";
