--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,3 +8,6 @@
 @import "partials/_cards";
 @import "partials/_carrusel";
 @import "partials/_videos";
+@import "partials/_button";
+@import "partials/_subtitulos";
+@import "partials/_imagen";
