--- a/styles/style.css
+++ b/styles/style.css
@@ -93,6 +93,9 @@ body {
 .inicio {
   margin-top: 50px; }
 
+.cartaNosotros {
+  margin-top: 50px; }
+
 /*carrusel*/
 .carrusel {
   margin-top: 50px; }
@@ -109,3 +112,20 @@ body {
 .videos-espacio {
   margin-top: 50px;
   margin-bottom: 50px; }
+
+.button {
+  background-color: #386ae8;
+  padding: 1em 2em;
+  border-radius: 20px;
+  font-size: 30px; }
+
+.btnpaddding {
+  padding: 10px;
+  margin: 10px; }
+
+h3 {
+  margin-top: 50px; }
+
+.imagen_clara {
+  margin-top: 50px;
+  opacity: 0.9; }
